2005-12-03 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/*: Removed obsolete profile_cwd variable.
	* scripts/pkginfo.in, scripts/libprometheus.bash.in: Fixed a quoting
	  bug.
	* scripts/libprometheus.bash.in: Made libprometheus use the directories
	  below ~prometheus (ie. ~prometheus/{sources,build}).

2005-11-27 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* Makefile.defs, scripts/Makefile: moved the helper scripts
	  out of /usr/bin and into /usr/lib/prometheus.

2005-11-26 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* man/pkginfo.1.in: Updated pkginfo's man page.
	* scripts/pkginfo.in: Updated help screen.

2005-11-23 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in: Removed function
	  `get_installed_version'.
	* scripts/pkginfo.in: Re-wrote pkginfo.

2005-09-11 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in: Changed source_profile and its callees
	  to work with the new reroot setup.

2005-09-04 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in: Made the sync_system a little bit more
	  foolproof.

2005-08-28 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in: Added sync_system function.
	* scripts/pkgrm.in: Rewritten to work with the new rerootd concept,
	  added "purge" feature.
	* scripts/pkgrm.8.in: Updated to reflect the recent code changes.

2005-07-28 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/message.h,
	  reroot/shared_implementation.cc (reroot::message c'tor): Removed
	  message type parameter.

	* reroot/rerootd/rerootd.cc: Gathered error messages.  Corrected help
	  text.  Added check for missing false root argument on command line.

	* reroot/rerootd/file.cc: Renamed `file_db' operator << to `dump', made
	  it flag stale entries rather than ignore them.

	* reroot/rerootd/messageloop.cc (send_meta): Added.