@@ -1,5 +1,7 @@
 2005-12-03 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
+	* scripts/pkgadd.in: Completed move of helper scripts to
+	  /usr/lib/prometheus.
 	* scripts/*: Removed obsolete profile_cwd variable.
 	* scripts/pkginfo.in, scripts/libprometheus.bash.in: Fixed a quoting
 	  bug.
